Attempting to fix the issues of zooming in too much

--- a/src/components/StandardPage.css
+++ b/src/components/StandardPage.css
@@ -13,3 +13,7 @@
 html {
   scroll-behavior: smooth;
 }
+
+body {
+  zoom: 100%;
+}
