--- a/src/pages/Survey.css
+++ b/src/pages/Survey.css
@@ -73,7 +73,7 @@
     justify-content:flex-start; 
     background-color: aliceblue;
     width: 80vw;
-    height: 100vh;
+    /* height: 100vh; */
     border: 10px;
     padding: 16px;
     border-color: red;
