--- a/src/pages/VideoPlayer.css
+++ b/src/pages/VideoPlayer.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+body {
+  zoom: 100%;
+}
+
 .VideoPlayer-content {
   /* background-color: lightgray; */
   background-image: linear-gradient(#9fbfdf, white);
